<resources>
    <string name="app_name">MessagingAppEncrypted</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="EmailHint">user@example.com</string>
    <string name="PasswordHint">************</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="MessagesButton">Messages</string>
    <string name="ContactsButton">Contacts</string>
    <string name="connecting">connecting...</string>
</resources>
